Aligned content to the right and removed the hover bug

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -528,15 +528,15 @@ nav.primary-nav ul li {
   width: 80px;
 }
 
+nav.secondary-nav ul li {
+  display: block;
+}
+
 /*
  =============================================
  Primary Footer
  =============================================
 */
-
-footer nav > * {
-  display: block;
-}
 
 .primary-footer small {
   float: left;
